F&GDEV/src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedDate__c</fullName>
        <description>The created Date of the Legacy Note Converted</description>
        <label>LegacyNoteConvertedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedId__c</fullName>
        <label>LegacyNoteConvertedId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDateTime__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedLastModifiedDate__c</fullName>
        <label>LegacyNoteConvertedLastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedOwnerId__c</fullName>
        <label>LegacyNoteConvertedOwnerId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEXMAGICMOVER__LegacyNoteConvertedParentId__c</fullName>
        <label>LegacyNoteConvertedParentId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
</CustomObject>